--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=poseuralert
+
+# Spring boot : configure H2 datasource
+spring.datasource.url=jdbc:h2:mem:automacorp;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driverClassName=org.h2.Driver
+
+# Spring boot : activate H2 console
+spring.h2.console.enabled=true
+spring.h2.console.path=/console
+
+# Spring boot : JPA
+spring.jpa.database=h2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.show_sql=true
+spring.jpa.defer-datasource-initialization=true
