--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=poseuralert
 
 # Spring boot : configure H2 datasource
-spring.datasource.url=jdbc:h2:mem:automacorp;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:automacorp;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;AUTOCOMMIT=ON
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driverClassName=org.h2.Driver
@@ -15,4 +15,6 @@ spring.jpa.database=h2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.defer-datasource-initialization=true
