feat: Add error pages, logout page, and authenticated user redirection
- Add logout page with success message and navigation links
- Add public profile not found error page (404)
- Redirect authenticated users from /login and /inscription to /rendez-vous
- Update ViewController to handle logout endpoint
- Add /logout endpoint to security configuration whitelist
- Update ProfileController to redirect to public-profile-not-found page

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ build/
 Document de cadrage de développement 1.pdf
 TEST_DATA_SUMMARY.md
 TEST_README.md
+**/src/main/resources/templates/fragments/README.md
 
 ### STS ###
 .apt_generated
